replace Estel with Ulbricht

--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Aaron Estel">
-    <meta name="author" content="Aaron Estel">
+    <meta name="description" content="Aaron Ulbricht">
+    <meta name="author" content="Aaron Ulbricht">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Aaron Estel - About</title>
+    <title>Aaron Ulbricht - About</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Aaron Estel</a>
+          <a class="navbar-brand" href="assets/docs/Resume.pdf">Resume</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -64,10 +64,10 @@
 	<div class="container">
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
-				<h2>AARON ESTEL</h2>
-				<p>When my parents bought our first computer, my dad told me I'd be able to make games on it. Ever since then, I've been fascinated with programming and computers.</p>
-				<p>Recently, I graduated from App Academy, and I finally feel like I have the tools to really make things! Web apps and games in Ruby, Javascript, and Backbone now come pretty easily.</p>
-				<p>I'm a big believer in the ablility of software to buffer people's weakness. Good software and technology makes people better. It's my hope to always be working on things that improve the world, whether that is by making it more fun with a game, or fighting akrasia with a to-do list.</p>
+				<h2>AARON ULBRICHT</h2>
+				<p>I'm currently looking for a position where I can challenge myself and help build something great. I'm a big believer in software's ability to help people be better and happier. </p>
+				<p>I have degrees in both Computer Science and psychology because I want to build tools that help people be their best selves. And I taught myself web development at App Academy because I believe web apps are one of the best platforms for those tools.</p>
+				<p>If you are looking for a web developer knows Ruby on Rails, javascript, and backbone.js, or just a problem solver with a passion for learning new things, please get in touch!.</p>
 			</div>
 
 		</div><! --/row -->
