--- a/gamifi.html
+++ b/gamifi.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Aaron Estel">
-    <meta name="author" content="Aaron Estel">
+    <meta name="description" content="Aaron Ulbricht">
+    <meta name="author" content="Aaron Ulbricht">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Aaron Estel - Gamifi</title>
+    <title>Aaron Ulbricht - Gamifi</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Aaron Estel</a>
+          <a class="navbar-brand" href="assets/docs/Resume.pdf">Resume</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
