--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
 					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>AARON ESTEL</h1>
+					<h1>AARON ULBRICHT</h1>
 					<h4>WEB DESIGNER, DEVELOPER, & GAME ADDICT</h4>
 				</div>
 			</div><! --/row -->
