--- a/gamifi.html
+++ b/gamifi.html
@@ -73,7 +73,7 @@
         <p><a href="http://www.gamifi.life/">Live Demo</a> - <a href="https://github.com/ShIxtan/Gamify">Github</a></p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
-				<img class="img-responsive" src="assets/img/pr01.png">
+				<img class="img-responsive" src="assets/img/pr01.jpg">
 			</div>
 
 		</div><! --/row -->
