--- a/gamifi.html
+++ b/gamifi.html
@@ -69,7 +69,7 @@
 		<div class="row centered mt mb">
 			<div class="col-lg-8 col-lg-offset-2">
 				<h4>ABOUT THE PROJECT</h4>
-				<p>Clone of the wonderful Habit RPG. Uses a RESTful Rails backend feeding data to the Backbone frontend. There is lots of intuitive interaction using jQueryUI, and pretty graphs using chart.js</p>
+				<p>Gamified single-page app for tracking and improving habits. Mobile responsive with an intuitive click-and-drag interface.</p>
         <p><a href="http://www.gamifi.life/">Live Demo</a> - <a href="https://github.com/ShIxtan/Gamify">Github</a></p>
 			</div>
 			<div class="col-lg-10 col-lg-offset-1 mt">
