fix linkedin link

--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@
           <a href="https://twitter.com/AaronUlbricht"><i class="fa fa-twitter"></i></a>
         </div>
         <div class="col-lg-2">
-          <a href="www.linkedin.com/in/aaronestel"><i class="fa fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/aaronestel"><i class="fa fa-linkedin"></i></a>
         </div>
         <div class="col-lg-2">
           <a href="https://www.tumblr.com/blog/aaronataa"><i class="fa fa-tumblr"></i></a>
