--- a/shepherd.html
+++ b/shepherd.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Aaron Ulbricht">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
-    <title>Aaron Ulbricht</title>
+    <title>Aaron Ulbricht - Shepherd</title>
 
     <!-- Bootstrap core CSS -->
     <link href="assets/css/bootstrap.css" rel="stylesheet">
@@ -43,89 +43,84 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="#works">Works</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="about.html">About</a></li>
+            <li><a href="index.html#works">Works</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </div>
 
 
-	<div id="headerwrap">
+	<div id="workwrap">
 	    <div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
-					<h4>HELLO PEOPLE, MY NAME IS</h4>
-					<h1>AARON ULBRICHT</h1>
-					<h4>WEB DESIGNER, DEVELOPER, & GAME ADDICT</h4>
+					<h4>LUDUM DARE 32</h4>
+					<h1>SHEPHERD</h1>
+					<h4>JAVASCRIPT - HTML5</h4>
 				</div>
 			</div><! --/row -->
 	    </div> <!-- /container -->
-	</div><! --/headerwrap -->
+	</div><! --/workwrap -->
 
 	<section id="works"></section>
 	<div class="container">
 		<div class="row centered mt mb">
-			<h1>My Portfolio</h1>
+			<div class="col-lg-8 col-lg-offset-2">
+				<h4>ABOUT THE PROJECT</h4>
+				<p>HTML5 game built for Ludum Dare 32. The theme was "an unconventional weapon" </p>
+        <p><a href="http://ludumdare.com/compo/ludum-dare-32/?action=preview&uid=52621">Live Demo</a> - <a href="https://github.com/ShIxtan/shepherd">Github</a></p>
+			</div>
+			<div class="col-lg-10 col-lg-offset-1 mt">
+				<img class="img-responsive" src="assets/img/shepherd.png">
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="boom.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="gamifi.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="rails.html"><img src="assets/img/portfolio/folio3.jpg" class="img-responsive"></a>
-			</div>
-      <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="shepherd.html"><img src="assets/img/portfolio/folio4.jpg" class="img-responsive"></a>
-			</div>
 		</div><! --/row -->
 	</div><! --/container -->
 
-	<div id="social">
-		<div class="container">
-			<div class="row centered">
+  <div id="social">
+    <div class="container">
+      <div class="row centered">
         <div class="col-lg-1">
 
         </div>
-				<div class="col-lg-2">
-					<a href="https://github.com/ShIxtan"><i class="fa fa-github"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="https://www.facebook.com/aaron.ulbricht.5"><i class="fa fa-facebook"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="https://twitter.com/AaronUlbricht"><i class="fa fa-twitter"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="https://www.linkedin.com/in/aaronestel"><i class="fa fa-linkedin"></i></a>
-				</div>
-				<div class="col-lg-2">
-					<a href="https://www.tumblr.com/blog/aaronataa"><i class="fa fa-tumblr"></i></a>
-				</div>
+        <div class="col-lg-2">
+          <a href="https://github.com/ShIxtan"><i class="fa fa-github"></i></a>
+        </div>
+        <div class="col-lg-2">
+          <a href="https://www.facebook.com/aaron.ulbricht.5"><i class="fa fa-facebook"></i></a>
+        </div>
+        <div class="col-lg-2">
+          <a href="https://twitter.com/AaronUlbricht"><i class="fa fa-twitter"></i></a>
+        </div>
+        <div class="col-lg-2">
+          <a href="https://www.linkedin.com/in/aaronestel"><i class="fa fa-linkedin"></i></a>
+        </div>
+        <div class="col-lg-2">
+          <a href="https://www.tumblr.com/blog/aaronataa"><i class="fa fa-tumblr"></i></a>
+        </div>
 
-			</div><! --/row -->
-		</div><! --/container -->
-	</div><! --/social -->
+      </div><! --/row -->
+    </div><! --/container -->
+  </div><! --/social -->
 
-	<div id="footerwrap">
-		<div class="container">
-			<div class="row centered">
-				<div class="col-lg-4">
-					<p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
-				</div>
+  <div id="footerwrap">
+    <div class="container">
+      <div class="row centered">
+        <div class="col-lg-4">
+          <p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+        </div>
 
-				<div class="col-lg-4">
-					<p>Living in the amazing San Francisco.</p>
-				</div>
-				<div class="col-lg-4">
-					<p>shixtan127@gmail.com</p>
-				</div>
-			</div>
-		</div>
-	</div><! --/footerwrap -->
+        <div class="col-lg-4">
+          <p>Living in the amazing San Francisco.</p>
+        </div>
+        <div class="col-lg-4">
+          <p>shixtan127@gmail.com</p>
+        </div>
+      </div>
+    </div>
+  </div><! --/footerwrap -->
 
 
 
@@ -135,4 +130,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
   </body>
-</html>
+  </html>
