fix call to shepherd img

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<a href="rails.html"><img src="assets/img/portfolio/folio3.jpg" class="img-responsive"></a>
 			</div>
       <div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="shepherd.html"><img src="assets/img/portfolio/folio4.jpg" class="img-responsive"></a>
+				<a href="shepherd.html"><img src="assets/img/portfolio/folio4.png" class="img-responsive"></a>
 			</div>
 		</div><! --/row -->
 	</div><! --/container -->
