--- a/shepherd.html
+++ b/shepherd.html
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="assets/docs/Resume.pdf">Resume</a>
+          <a class="navbar-brand" href="https://docs.google.com/document/d/1STPOfyBEN90sT4kCZBlrA50Cy0xWYOHq98svt4nceK0/edit?usp=sharing">Resume</a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -109,7 +109,7 @@
     <div class="container">
       <div class="row centered">
         <div class="col-lg-4">
-          <p><b>WEB DESIGNER, DEVELOPER & GAME ADDICT</b></p>
+          <p><b>WEB DEVELOPER, AUTODIDACT & LIFEHACKER</b></p>
         </div>
 
         <div class="col-lg-4">
